Moss Changelog

!	Security fix and important improve;
*	Common bug fix and improve;
+	Feature add;
-	Feature remove;


2.0.1
=====
2015-MM-DD
+ Add YUM Priorities plugin. CentOS-Base set to 1, CentOS-Plus set to 2
  and EPEL set to 3;
* Fix Vim statusline;
* Arrange RPMs in install_rpm.sh;
- Remove htop RPM;


2.0.0
=====
2015-09-19
! Support uninstall Moss. Select 'u' in installaion interface;
! Use CentOS original libs.(libxml2,zlib,openssl,pcre,libmcrypt etc.);
+ Add Name Service Caching Daemon (NSCD);
+ Support log user shell commands in syslog (/var/log/secure);
+ Prompt user reboot system if needed;
+ Set GRUB to visable boot mode;
+ Add /etc/resolv.conf optimize;
+ Add package_info.sh tool;
* Optimize L.N.M.P and library packages install policy;
* Speed up service software packages installation;
* Optimize system service on/off policy;
* Enhance Bash command alias;
* Enhance vimrc profile;
* Refine every steps of system config;
* Installation will be abort if YUM install/update failed;
* Update php.ini for PHP 5.6;
* Optimize MySQL my.cnf;
* Fix YUM repository config file;
* Fix installation TUI bug;
* Fix Redis anonymous access. Add Redis password;
* Fix SSH user login and public key jugement policy;
* Fix Nginx Vim syntax file for Vim 7.x;
* Fix MySQL database can not backup with Percona Xtrabackup;
- Remove XCache. Use PHP 5.6 build-in Zend OPcache instead;
- Remove Squid,Varnish,KeepAlived,PECL XHProf and memcached;
- Remove service.sh script, merged with config_sys.sh;


1.6.4
=====
2015-02-24
+ Add server tools;
+ Log rotate will keep last 30 days logs, old logs will be deleted;
+ Before install a service, Moss will check if it has been running on host;
* Update YUM repository config file. Using multi-repositories instead of single;
* Fix Percona Xtrabackup script run fail;
* Fix Nginx log rotate bug which it always rotate log to /var/log/nginx;
* Reduce installation time when select mode 4 (Install Nginx only);


1.6.3
=====
2014-12-24