@@ -4,14 +4,16 @@
 if [ ${CHANGE_YUM} -eq 1 2>/dev/null ];then
     if ! grep '^YUM_CHANGE' ${INST_LOG} > /dev/null 2>&1 ;then
         install -m 0644 ${TOP_DIR}/conf/yum/CentOS-Base.repo /etc/yum.repos.d/CentOS-Base.repo
+        yum clean all
         ## log installed tag
-        echo 'YUM_CHANGE' >> ${INST_LOG}        
+        echo 'YUM_CHANGE' >> ${INST_LOG} 
     fi
 fi
 
 ## install EPEL repo
 if ! grep '^ADD_EPEL' ${INST_LOG} > /dev/null 2>&1 ;then
     install -m 0644 ${TOP_DIR}/conf/yum/epel.repo /etc/yum.repos.d/epel.repo
+    yum clean all
     ## log installed tag
     echo 'ADD_EPEL' >> ${INST_LOG}
 fi
@@ -129,7 +131,13 @@ fi
 ## install saltstack
 if [ ${INST_SALT} -eq 1 2>/dev/null ]; then
     if ! grep '^YUM_SALT' ${INST_LOG} > /dev/null 2>&1 ;then
-        yum install salt-minion -y || fail_msg "SaltStack Minion Install Failed!"
+        succ_msg "Getting SaltStack repository key..."
+        wget -c -t10 -nH -T900 https://repo.saltstack.com/yum/rhel6/SALTSTACK-GPG-KEY.pub -P /tmp || fail_msg "Getting SaltStack Key Failed!"
+        rpm --import /tmp/SALTSTACK-GPG-KEY.pub
+        rm -f /tmp/SALTSTACK-GPG-KEY.pub
+        install -m 0644 ${TOP_DIR}/conf/yum/saltstack.repo /etc/yum.repos.d/saltstack.repo        
+        yum clean expire-cache
+        yum install --disablerepo=epel salt-minion -y || fail_msg "SaltStack Minion Install Failed!"
         [ -f "/etc/salt/minion" ] && rm -f /etc/salt/minion
         install -m 0644 ${TOP_DIR}/conf/saltstack/minion /etc/salt/minion
         sed -i "s#^master.*#master: ${SALT_MASTER}#" /etc/salt/minion
