@@ -1,0 +1,8 @@
+# Enable SaltStack's package repository
+[saltstack-repo]
+name=SaltStack repo for RHEL/CentOS 6
+baseurl=https://repo.saltstack.com/yum/rhel6
+enabled=1
+gpgcheck=1
+gpgkey=https://repo.saltstack.com/yum/rhel6/SALTSTACK-GPG-KEY.pub
+priority=1
